possible fix to mobile image stretching

--- a/styles.css
+++ b/styles.css
@@ -8,9 +8,9 @@ p {
 }
 
 img {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
+  width: 100%;
+/*  max-height: 100%;
+  width: auto;*/
   height: auto;
 }
 
